# AdvectionDiffusion3D

./: environment.yml  main.py  pyproject.toml  readme.md
data/points/: 100_tsphere.npy  1038_tsphere.npy  10_tsphere.npy  120_tsphere.npy  144_tsphere.npy  180_tsphere.npy  2018_tsphere.npy  204_tsphere.npy  20_tsphere.npy  240_tsphere.npy  3006_tsphere.npy  30_tsphere.npy  328_tsphere.npy  4008_tsphere.npy  40_tsphere.npy  438_tsphere.npy  50_tsphere.npy  5154_tsphere.npy  564_tsphere.npy  5_tsphere.npy  60_tsphere.npy  6218_tsphere.npy  706_tsphere.npy  70_tsphere.npy  80_tsphere.npy  864_tsphere.npy  90_tsphere.npy  sphere_number_list.npy
plotting/: plotting.py
src/SpectralAdvectionDiffusion/: __init__.py  mfs_functions.py  particular_functions.py  simulate.py
src/SpectralAdvectionDiffusion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
testing/: homogeneous_functions_test.py  homogeneous_update_test.py  mass.ipynb  particular_test.py  pyvista_test.ipynb  test.ipynb  wind_test.ipynb
