[project]
name = "SpectralAdvectionDiffusion"
version = "0.1.0"
authors = [
  { name="Andres Pruet", email="andres_pruet@mines.edu" },
]
description = "2D advection-diffusion simulation"
readme = "readme.md"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/andres-pruet/spectral-advection-diffusion"